<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.hotel.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.hotel.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" >
        <action
            android:id="@+id/action_nav_gallery_to_nav_LogOut"
            app:destination="@id/nav_LogOut" />
    </fragment>

    <fragment
        android:id="@+id/nav_Contacts"
        android:name="com.example.hotel.ui.Contacts.Contacts"
        android:label="@string/menu_Contacts"
        tools:layout="@layout/fragment_contacts" />
    <fragment
        android:id="@+id/nav_LogOut"
        android:name="com.example.hotel.ui.Logout.LogoutFragment"
        android:label="Logout"
        tools:layout="@layout/fragment_logout" >
        <action
            android:id="@+id/action_nav_LogOut_to_nav_gallery"
            app:destination="@id/nav_gallery" />
    </fragment>

</navigation>