<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#070707">


  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="#E6DEFF"
      android:paddingStart="10dp"
      tools:context=".Home">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="380dp"
        android:background="@color/black"
        android:fontFamily="sans-serif-black"
        android:paddingStart="15dp"
        android:paddingTop="8dp"
        android:text="@string/postal"
        android:textAlignment="viewStart"
        android:textColor="#69B1F1"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="104dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="100dp"
        android:background="@color/black"
        android:fontFamily="sans-serif-black"
        android:paddingTop="8dp"
        android:text="@string/nm"
        android:textAlignment="center"
        android:textColor="#69B1F1"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="310dp"
        android:background="@color/black"
        android:fontFamily="sans-serif-black"
        android:paddingStart="15dp"
        android:paddingTop="8dp"
        android:text="@string/city"
        android:textAlignment="viewStart"
        android:textColor="#69B1F1"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="590dp"
        android:background="@color/black"
        android:fontFamily="sans-serif-black"
        android:paddingStart="1dp"
        android:paddingTop="8dp"
        android:text="@string/adhar_no"
        android:textAlignment="viewStart"
        android:textColor="#69B1F1"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="520dp"
        android:background="@color/black"
        android:fontFamily="sans-serif-black"
        android:paddingStart="15dp"
        android:paddingTop="8dp"
        android:text="@string/mail"
        android:textAlignment="viewStart"
        android:textColor="#69B1F1"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="660dp"
        android:background="@color/black"
        android:fontFamily="sans-serif-black"
        android:paddingStart="15dp"
        android:paddingTop="8dp"
        android:text="@string/c_id"
        android:textAlignment="viewStart"
        android:textColor="#69B1F1"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="240dp"
        android:background="@color/black"
        android:fontFamily="sans-serif-black"
        android:paddingStart="8dp"
        android:paddingTop="8dp"
        android:text="@string/address"
        android:textAlignment="viewStart"
        android:textColor="#69B1F1"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="450dp"
        android:background="@color/black"
        android:fontFamily="sans-serif-black"
        android:paddingStart="10dp"
        android:paddingTop="8dp"
        android:text="Gender"
        android:textAlignment="viewStart"
        android:textColor="#69B1F1"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="104dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="170dp"
        android:background="@color/black"
        android:fontFamily="sans-serif-black"
        android:paddingStart="15dp"
        android:paddingTop="8dp"
        android:text="@string/phone"
        android:textAlignment="viewStart"
        android:textColor="#69B1F1"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/cname"
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="100dp"
        android:autofillHints=""
        android:background="@drawable/int3"
        android:ems="10"
        android:hint="@string/please_enter_name"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="#98C5EC"
        android:textColorHint="#98C5EC"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/ccity"
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="310dp"
        android:autofillHints=""
        android:background="@drawable/int3"
        android:ems="10"
        android:hint="@string/enter_city"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="#98C5EC"
        android:textColorHint="#98C5EC"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/cpost"
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="380dp"
        android:autofillHints=""
        android:background="@drawable/int3"
        android:ems="10"
        android:hint="Enter Postal Code"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="#98C5EC"
        android:textColorHint="#98C5EC"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/cadr"
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="590dp"
        android:autofillHints=""
        android:background="@drawable/int3"
        android:ems="10"
        android:hint="@string/enter_adhar"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="#98C5EC"
        android:textColorHint="#98C5EC"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/cmail"
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="520dp"
        android:background="@drawable/int3"
        android:ems="10"
        android:hint="@string/enter_emaill"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColor="#98C5EC"
        android:textColorHint="#98C5EC"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/cid"
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="660dp"
        android:autofillHints=""
        android:background="@drawable/int3"
        android:ems="10"
        android:hint="@string/enter_id"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="#98C5EC"
        android:textColorHint="#98C5EC"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/czen"
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="450dp"
        android:autofillHints=""
        android:background="@drawable/int3"
        android:hint="@string/enter_zender"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="#98C5EC"
        android:textColorHint="#98C5EC"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/cphone"
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="170dp"
        android:autofillHints=""
        android:background="@drawable/int3"
        android:ems="10"
        android:hint="@string/enter_phone"
        android:inputType="phone"
        android:textAlignment="center"
        android:textColor="#98C5EC"
        android:textColorHint="#98C5EC"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/cusave"
        android:layout_width="148dp"
        android:layout_height="42dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="724dp"
        android:background="@drawable/input"
        android:fontFamily="sans-serif-black"
        android:text="@string/add"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="221dp"
        android:layout_height="24dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="56dp"
        android:fontFamily="@font/asset"
        android:text="@string/details"
        android:textAlignment="inherit"
        android:textColor="#0E80E6"
        android:textSize="18sp"
        android:textStyle="bold"
        app:autoSizeTextType="uniform"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txy"
        android:layout_width="248dp"
        android:layout_height="26dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/asset"
        android:text="@string/customer"
        android:textAlignment="inherit"
        android:textColor="@color/black"
        android:textSize="10sp"
        android:textStyle="bold"
        app:autoSizeTextType="uniform"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/cadd"
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="240dp"
        android:autofillHints=""
        android:background="@drawable/int3"
        android:ems="10"
        android:gravity="center|start"
        android:hint="@string/enter_address"
        android:inputType="textMultiLine"
        android:textAlignment="center"
        android:textColor="#98C5EC"
        android:textColorHint="#98C5EC"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />


  </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>