<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/txtUser"
        android:layout_width="285dp"
        android:layout_height="55dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="288dp"
        android:background="@drawable/int2"
        android:ems="10"
        android:hint="@string/enter_user_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColor="#A8E3D4CF"
        android:textColorHint="#E2F3EFED"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtPass"
        android:layout_width="284dp"
        android:layout_height="54dp"
        android:layout_marginTop="364dp"
        android:background="@drawable/int2"
        android:ems="10"
        android:hint="@string/enter_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColor="#D7E3DAD0"
        android:textColorHint="#ECE7DD"
        app:layout_constraintEnd_toEndOf="@+id/txtUser"
        app:layout_constraintStart_toStartOf="@+id/txtUser"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnlogin"
        android:layout_width="219dp"
        android:layout_height="52dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="460dp"
        android:background="@drawable/int3"
        android:onClick="GoToBase"
        android:text="@string/login"
        app:cornerRadius="70dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rippleColor="@color/ic_launcher_background"
        tools:ignore="UsingOnClickInXml,TextContrastCheck" />

    <TextView
        android:id="@+id/lg"
        android:layout_width="251dp"
        android:layout_height="81dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="204dp"
        android:ems="10"
        android:fontFamily="@font/asset"
        android:importantForAutofill="no"
        android:text="@string/lg"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="normal|bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="76dp"
        android:layout_height="100dp"
        android:layout_marginStart="288dp"
        android:layout_marginTop="264dp"
        android:contentDescription="@string/todo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/u" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginStart="304dp"
        android:layout_marginTop="372dp"
        android:contentDescription="@string/todo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/p"
        tools:ignore="ImageContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>