<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E6DEFF"
    tools:context=".Staf"
    tools:layout_editor_absoluteX="12dp"
    tools:layout_editor_absoluteY="71dp">


    <TextView
        android:id="@+id/textView10"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="310dp"
        android:background="@color/black"
        android:fontFamily="sans-serif-black"
        android:paddingStart="15dp"
        android:paddingTop="8dp"
        android:text="@string/post"
        android:textAlignment="viewStart"
        android:textColor="#69B1F1"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="104dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="100dp"
        android:background="@color/black"
        android:fontFamily="sans-serif-black"
        android:paddingStart="15dp"
        android:paddingTop="8dp"
        android:text="@string/nm"
        android:textAlignment="viewStart"
        android:textColor="#69B1F1"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="380dp"
        android:background="@color/black"
        android:fontFamily="sans-serif-black"
        android:paddingStart="15dp"
        android:paddingTop="8dp"
        android:text="@string/salary"
        android:textAlignment="viewStart"
        android:textColor="#69B1F1"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="450dp"
        android:background="@color/black"
        android:fontFamily="sans-serif-black"
        android:paddingStart="15dp"
        android:paddingTop="8dp"
        android:text="@string/e_id"
        android:textAlignment="viewStart"
        android:textColor="#69B1F1"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="240dp"
        android:background="@color/black"
        android:fontFamily="sans-serif-black"
        android:paddingStart="8dp"
        android:paddingTop="8dp"
        android:text="@string/address"
        android:textAlignment="viewStart"
        android:textColor="#69B1F1"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="104dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="170dp"
        android:background="@color/black"
        android:fontFamily="sans-serif-black"
        android:paddingStart="15dp"
        android:paddingTop="8dp"
        android:text="@string/phone"
        android:textAlignment="viewStart"
        android:textColor="#69B1F1"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="221dp"
        android:layout_height="24dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="56dp"
        android:fontFamily="@font/asset"
        android:text="@string/details"
        android:textAlignment="inherit"
        android:textColor="#0E80E6"
        android:textSize="18sp"
        android:textStyle="bold"
        app:autoSizeTextType="uniform"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/txy"
        android:layout_width="248dp"
        android:layout_height="26dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/asset"
        android:text="@string/employee"
        android:textAlignment="inherit"
        android:textColor="@color/black"
        android:textSize="10sp"
        android:textStyle="bold"
        app:autoSizeTextType="uniform"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/empphone"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="170dp"
        android:background="@drawable/int3"
        android:ems="10"
        android:hint="Enter Phone Number"
        android:inputType="number|phone"
        android:textAlignment="center"
        android:textColorHint="#98C5EC"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/empadd"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="240dp"
        android:background="@drawable/int3"
        android:ems="10"
        android:hint="Enter Address"
        android:inputType="textShortMessage|textLongMessage|number|textPersonName"
        android:textAlignment="center"
        android:textColorHint="#98C5EC"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/empid"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="450dp"
        android:background="@drawable/int3"
        android:ems="10"
        android:hint="Enter EID"
        android:inputType="number"
        android:textAlignment="center"
        android:textColorHint="#98C5EC"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/empsalary"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="380dp"
        android:background="@drawable/int3"
        android:ems="10"
        android:hint="Enter Salary"
        android:inputType="number"
        android:textAlignment="center"
        android:textColorHint="#98C5EC"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/emppost"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="310dp"
        android:background="@drawable/int3"
        android:ems="10"
        android:hint="Enter Post"
        android:inputType="number"
        android:textAlignment="center"
        android:textColorHint="#98C5EC"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/empname"
        android:layout_width="250dp"
        android:layout_height="39dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/int3"
        android:ems="10"
        android:hint="Enter Name "
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColorHint="#98C5EC"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <androidx.constraintlayout.helper.widget.Layer
        android:id="@+id/layer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="46dp"
        app:constraint_referenced_ids="textView11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txy" />

    <Button
        android:id="@+id/empsave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="149dp"
        android:layout_marginTop="540dp"
        android:text="@string/EMSAVE"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>